--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Department of Computer Science and Engineering <br />
 <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a> <br />
 Supervised by <a href="http://www.cse.cuhk.edu.hk/~byu/">Professor Bei Yu</a> <br />
 Email: yuyangye@cuhk.edu.hk<br />
-Note: Photo from Abu FeiFei</p>
+Note: Photo via Abu FeiFei</p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
 <p>I am Yuyang Ye (叶雨阳 in Chinese), currently a post-doc reseacher at the Department of Computer Science and Engineering,  <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a>. 
@@ -40,13 +40,15 @@ My research interests include timing analysis, timing optimization and machine l
 <p>* denotes equal contribution, # denotes corresponding author.</p>
 <h3>Conference Papers</h3>
 <ul>
+<li><p>[C17] Yufan Chen, Leyun Tian, <b>Yuyang Ye</b>, Chuanpu Shi, Hao Yan, &lsquo;&lsquo;A Statistical Static Timing Analysis Algorithm Based On Graph Neural Network&rsquo;&rsquo;, IEEE International Symposium of EDA (<b>ISEDA</b>), May 9–12, 2025.</p>
+</li>
 <li><p>[C16] Mingwei He, Leyun Tian, Yaning Jia, <b>Yuyang Ye#</b>, &lsquo;&lsquo;  Pre-Routing Timing Estimation Considering Power Delivery Network&rsquo;&rsquo;, IEEE International Symposium of EDA (<b>ISEDA</b>), May 9–12, 2025.</p>
 </li>
 <li><p>[C15] <b>Yuyang Ye</b>, Mingwei He, Lizheng Ren, Jianwang Zhai, Tinghuan Chen, Jun Yang, Longxing Shi, &lsquo;&lsquo;  Truly Pre-Routing Timing Prediction via Considering Power Delivery Network", ACM/IEEE Design Automation Conference (<b>DAC</b>), San Francisco, Jun. 22–25, 2025.</p>
 </li>
 <li><p>[C14] <b>Yuyang Ye</b>, Xiangfei Hu, Yuchen Liu, Peng Xu, Yu Gong, Tinghuan Chen, Hao Yan, Bei Yu, Longxing Shi, &lsquo;&lsquo;  Rank-based Multi-objective Approximate Logic Synthesis via Monte Carlo Tree Search", ACM/IEEE Design Automation Conference (<b>DAC</b>), San Francisco, Jun. 22–25, 2025.</p>
 </li>
-<li><p>[C13] Xiangfei Hu, <b>Yuyang Ye#</b>, Tinghuan Chen, Hao Yan, Bei Yu, &ldquo;Timing-driven Approximate Logic Synthesis Based on Double-chase Grey Wolf Optimizer&rdquo;,  Proceedings Design, Automation and Test in Europe (<b>DATE</b>), Lyon, France, Mar. 31–Apr. 02, 2025.</p>
+<li><p>[C13] Xiangfei Hu, <b>Yuyang Ye#</b>, Tinghuan Chen, Hao Yan#, Bei Yu, &ldquo;Timing-driven Approximate Logic Synthesis Based on Double-chase Grey Wolf Optimizer&rdquo;,  Proceedings Design, Automation and Test in Europe (<b>DATE</b>), Lyon, France, Mar. 31–Apr. 02, 2025.</p>
 </li>
 <li><p>[C12] Fangzhou Liu, Guannan Guo, <b>Yuyang Ye</b>, Ziyi Wang, Wenjie Fu, Weihua Sheng, Bei Yu, &ldquo;GraphCAD: Leveraging Graph Neural Networks for Accuracy Prediction Handling Crosstalk-affected Delays&rdquo;, ACM International Symposium on Physical Design (<b>ISPD</b>), Taipei, Mar. 12–15, 2025.</p>
 </li>
@@ -75,9 +77,13 @@ My research interests include timing analysis, timing optimization and machine l
 </ul>
 <h3>Journal Papers</h3>
 <ul>
+<li><p>[J10] Peng Cao#, Zeyuan Deng, Yuhan Dong, Xu Cheng, <b>Yuyang Ye#</b>, Jun Yang, &lsquo;&lsquo;StatCHAR: Statistical Timing Characterization Framework via Heterogeneous Graph Attention Network and Active Learning With Parasitic RC Reduction”, accepted by IEEE Transactions on Circuits and Systems I: Regular Papers (<b>TCAS-I</b>).</p>
+</li>
+<li><p>[J9] Shuaibo Huang, <b>Yuyang Ye#</b>, Hao Yan, Longxing Shi &lsquo;&lsquo;DCTDSE: A Bimodal Design Space Exploration Flow via Discrete Continuous Transformation”, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
+</li>
 <li><p>[J8] Shuaibo Huang, <b>Yuyang Ye#</b>, Hao Yan, Longxing Shi &lsquo;&lsquo;ARS-Flow 2.0: A Enhanced Design Space Exploration Flow for Accelerator-rich System based on Active Learning”, accepted by Integration, the VLSI Journal (<b>Integration</b>).</p>
 </li>
-<li><p>[J7] Peng Cao, Yusen Qin, Guoqing He, Wenjie Ding, Xu Cheng, Zhanhua Zhang, <b>Yuyang Ye#</b>, &lsquo;&lsquo;An Optimization-aware Pre-Routing Timing Prediction Framework Based on Multi-modal Learning”, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
+<li><p>[J7] Peng Cao#, Yusen Qin, Guoqing He, Wenjie Ding, Xu Cheng, Zhanhua Zhang, <b>Yuyang Ye#</b>, &lsquo;&lsquo;An Optimization-aware Pre-Routing Timing Prediction Framework Based on Multi-modal Learning”, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
 </li>
 <li><p>[J6] <b>Yuyang Ye</b>, Peng Xu, Lizheng Ren, Tinghuan Chen, Yifei Gao, Hao Yan, Bei Yu, Longxing Shi, &ldquo;Learning-driven Physically-aware Large-scale Circuit Gate Sizing&rdquo;, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
 </li>
@@ -89,7 +95,7 @@ My research interests include timing analysis, timing optimization and machine l
 </li>
 <li><p>[J2] <b>Yuyang Ye</b>, Tinghuan Chen, Yifei Gao, Hao Yan, Bei Yu, Longxing Shi, &ldquo;Aging-aware Critical Path Selection via Graph Attention Networks&rdquo;, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
 </li>
-<li><p>[J1] <b>Yuyang Ye</b>, Tinghuan Chen, Zicheng Wang, Hao Yan, Bei Yu, Longxing Shi, &ldquo;Fast and Accurate Aging-aware Cell Timing Model via Graph Learning&rdquo;, accepted by IEEE Transactions on Circuits and Systems II (<b>TCASII</b>).</p>
+<li><p>[J1] <b>Yuyang Ye</b>, Tinghuan Chen, Zicheng Wang, Hao Yan, Bei Yu, Longxing Shi, &ldquo;Fast and Accurate Aging-aware Cell Timing Model via Graph Learning&rdquo;, accepted by IEEE Transactions on Circuits and Systems II (<b>TCAS-II</b>).</p>
 </li>
 </ul>
 <h2>SELECTED AWARDS</h2>
