--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@ My research interests include timing analysis, timing optimization and machine l
 <p>* denotes equal contribution, # denotes corresponding author.</p>
 <h3>Conference Papers</h3>
 <ul>
+<li><p>[C25] Feng Guo, Yueyue Xi, Jingyu Jia, Jiawei Liu, Tianshu Hou, <b>Yuyang Ye</b>, Jianwang Zhai, Kang Zhao, Chuan Shi, &ldquo;GEMIR: Graph-Based Joint Modeling of Electromigration and IR Drop for Power Grid,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C24] Peng Xu, Mingzi Wang, Yapeng Li, <b>Yuyang Ye</b>, Tinghuan Chen, Tsung-Yi Ho, Bei Yu, &ldquo;DiffSP: Differentiable Sequence Pair-based Analog Placement,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C23] Fangzhou Liu, Wuqian Tang, Bo-Ying Wang, An-Chieh Shen, Han-Wen Tsao, <b>Yuyang Ye</b>, Yun Shao, Chun-Yao Wang, Bei Yu, &ldquo;HyPAS: A Hybrid Optimization Framework for Placement and Sizing Co-Optimization,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C22] Chang Meng, Hanyu Wang, <b>Yuyang Ye#</b>, Mingfei Yu, Wayne Burleson, Giovanni De Micheli, &ldquo;TRAM: Training Approximate Multiplier Structures for Low-Power AI Accelerators,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C21] Peiyi Han, Yuntao Lu, Haiyang Liu, Fangzhou Liu, Xufeng Yao, <b>Yuyang Ye#</b>, &ldquo;LLM4SDC: Leveraging Multi-Agent System for Automated SDC Generation and Benchmarking,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C20] Yuren Zhou, Fan Yang, Zihao Zeng, Yifan Wang, <b>Yuyang Ye#</b>, Qing He, &ldquo;Crosstalk Timing Prediction via Graph Prompt Learning in Aggressor-Victim RC Networks,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C19] <b>Yuyang Ye</b>, Xiangfei Hu, Leyun Tian, Chang Meng#, Qing He, Longxing Shi, &ldquo;Path-Based Timing Analysis Acceleration via Segment-Level Timing Arc Reuse,&rdquo; ACM/IEEE Design Automation Conference (<b>DAC</b>), Long Beach, Jul. 26–29, 2026.</p>
+</li>
+<li><p>[C18] <b>Yuyang Ye</b>, Che-Kuan Shen, Xiangfei Hu, Yuchen Liu, Shuo Yin, Xufeng Yao, Tsung-Yi Ho, Bei Yu, &ldquo;LongRTL: Graph-Similarity-Guided LLM-driven Long Context RTL Optimization,&rdquo; IEEE/ACM Design, Automation and Test in Europe (<b>DATE</b>), Verona, Italy, Apr. 20–22, 2026.</p>
+</li>
 <li><p>[C17] Yufan Chen, Leyun Tian, <b>Yuyang Ye</b>, Chuanpu Shi, Hao Yan, &lsquo;&lsquo;A Statistical Static Timing Analysis Algorithm Based On Graph Neural Network&rsquo;&rsquo;, IEEE International Symposium of EDA (<b>ISEDA</b>), May 9–12, 2025.</p>
 </li>
 <li><p>[C16] Mingwei He, Leyun Tian, Yaning Jia, <b>Yuyang Ye#</b>, &lsquo;&lsquo;  Pre-Routing Timing Estimation Considering Power Delivery Network&rsquo;&rsquo;, IEEE International Symposium of EDA (<b>ISEDA</b>), May 9–12, 2025.</p>
@@ -77,6 +93,8 @@ My research interests include timing analysis, timing optimization and machine l
 </ul>
 <h3>Journal Papers</h3>
 <ul>
+<li><p>[J11] Peng Xu, Su Zheng, <b>Yuyang Ye</b>, Chen Bai, Siyuan Xu, Hao Geng, Tsung-Yi Ho, Bei Yu, &ldquo;RankTuner: When Design Tool Parameter Tuning Meets Preference Bayesian Optimization,&rdquo; accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
+</li>
 <li><p>[J10] Peng Cao#, Zeyuan Deng, Yuhan Dong, Xu Cheng, <b>Yuyang Ye#</b>, Jun Yang, &lsquo;&lsquo;StatCHAR: Statistical Timing Characterization Framework via Heterogeneous Graph Attention Network and Active Learning With Parasitic RC Reduction”, accepted by IEEE Transactions on Circuits and Systems I: Regular Papers (<b>TCAS-I</b>).</p>
 </li>
 <li><p>[J9] Shuaibo Huang, <b>Yuyang Ye#</b>, Hao Yan, Longxing Shi &lsquo;&lsquo;DCTDSE: A Bimodal Design Space Exploration Flow via Discrete Continuous Transformation”, accepted by IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>).</p>
