--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Note: Photo via Abu FeiFei</p>
 <h2>BIOGRAPHY</h2>
 <p>I am Yuyang Ye (叶雨阳 in Chinese), currently a post-doc reseacher at the Department of Computer Science and Engineering,  <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a>. 
 Prior to that, I got my Ph.D. from <a href="https://www.seu.edu.cn/">Southeast Univeristy (SEU)</a> in 2024.
-My research interests include timing analysis, timing optimization and machine learning for EDA.</p>
+My research interests include timing analysis, timing optimization, machine learning for EDA and LLM for EDA.</p>
 <h2>RESEARCH INTERESTS</h2>
 <ul>
 <li><p>Machine Learning for EDA</p>
@@ -138,3 +138,4 @@ My research interests include timing analysis, timing optimization and machine l
 </div>
 </body>
 </html>
+
