--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ My research interests include timing analysis, timing optimization, machine lear
 <ul>
 <li><p>Machine Learning for EDA</p>
 </li>
+<li><p>LLM for EDA</p>
+</li>
 <li><p>Timing Analysis</p>
 </li>
 <li><p>Timing Optimization</p>
@@ -138,4 +140,5 @@ My research interests include timing analysis, timing optimization, machine lear
 </div>
 </body>
 </html>
+
 
